# pytest-test-observer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/basic/: pyproject.toml
examples/basic/tests/: test_flaky.py  test_user_flows.py
examples/xdist/: pyproject.toml
examples/xdist/tests/: test_api.py  test_db.py  test_flaky.py  test_workers.py
grafana/dashboards/: pytest-test-observer-overview.json  pytest-test-observer-test-detail.json
grafana/provisioning/dashboards/: pytest-test-observer.yaml
grafana/provisioning/datasources/: clickhouse.yaml
loadtest/: run_loadtest.py  test_load.py
src/pytest_test_observer/: allure_compat.py  allure_compat_helpers.py  buffer.py  constants.py  context.py  helper.py  models.py  options.py  plugin.py  replay.py  reporter.py  schema.py
tests/: conftest.py  test_allure_compat.py  test_allure_compat_helpers.py  test_buffer.py  test_context.py  test_helper.py  test_options.py  test_plugin.py  test_replay.py  test_reporter.py  test_schema.py
